remove dist/ files

--- a/src/styles/scss/_copy-audio-buttons.scss
+++ b/src/styles/scss/_copy-audio-buttons.scss
@@ -19,6 +19,6 @@
   }
   .btn:focus {
     outline: none !important;
-    box-shadow: none !important;
+    box-shadow: 5px 10px #888888 !important;
     border: 1 px solid transparent !important;
   }
